@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(synthv1, 0.9.9, rncbc@rncbc.org)
+AC_INIT(synthv1, 0.9.10, rncbc@rncbc.org)
 
 AC_CONFIG_SRCDIR(src/synthv1.cpp)
 AC_CONFIG_HEADERS(src/config.h)
@@ -217,7 +217,8 @@ AC_CACHE_CHECK([for g++ major version], [ac_cv_gxx_version_major], [
 ])
 ac_gxx_version_major=$ac_cv_gxx_version_major
 if test $ac_gxx_version_major -ge 4 -a $ac_gxx_version_major -lt 6; then
-   CXXFLAGS="-std=c++11 $CXXFLAGS"
+   CPPFLAGS="-std=c++11 $CPPFLAGS"
+   ac_cflags="-std=c++11 $ac_cflags"
 fi
 
 # Check for proper flags.
